--- a/src/components/License.astro
+++ b/src/components/License.astro
@@ -1,6 +1,5 @@
 ---
 const { title, url } = Astro.props;
-import { t } from "i18next";
 ---
 
 <br />
@@ -32,7 +31,7 @@ import { t } from "i18next";
       class="btn glass mx-10"
       onclick="share_modal.showModal()"
     >
-      {t("label.share")}<svg
+      Share<svg
         viewBox="0 0 24 24"
         xmlns="http://www.w3.org/2000/svg"
         class="stroke-current fill-current shrink-0 h-6 w-6"
