--- a/src/components/TagCard.astro
+++ b/src/components/TagCard.astro
@@ -1,6 +1,5 @@
 ---
 import { getCollection } from "astro:content";
-import { t } from "i18next";
 
 interface TagCount {
   tag: string;
@@ -27,7 +26,7 @@ const tagsWithCounts = await getTagsWithCounts();
 <div class="bg-base-100 shadow-xl w-full mb-8 no-card p-4">
   <div class="p-4">
     <div class="btn btn-sm btn-ghost no-animation w-full font-bold">
-      {t("label.tagCard")}
+      Tags
     </div>
   </div>
   <div class="flex flex-wrap gap-2.5 w-full max-h-[300px] overflow-auto">
