--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,23 +21,15 @@ import { USER_SITE } from "../consts";
       ></path>
     </svg>
     <p>
-      Copyright © <a
-        href={USER_SITE}
-        target="_blank"
-        class="font-bold">{USER_NAME}</a
+      Copyright © <a href={USER_SITE} target="_blank" class="font-bold"
+        >{USER_NAME}</a
       >
       {new Date().getFullYear()} - All right reserved
     </p>
   </aside>
   <nav>
     <p>
-      Powered by
-      <!-- Thanks for using this template. You can keep this line to support my work :) -->
-      <a
-        href="https://github.com/EveSunMaple/Frosti"
-        target="_blank"
-        class="font-bold">Frosti Template ⚡️</a
-      >
+      <a href="/" class="font-bold">bassiounix.github.io ⚡️</a>
     </p>
   </nav>
 </footer>
