--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -73,7 +73,7 @@ const pageLinks = generatePageLinks(totalPages);
     <Search
       id="search"
       className="pagefind-ui"
-      uiOptions={{ showImages: false }}
+      uiOptions={{ showImages: true }}
     />
   </BaseCard>
   <div class="mt-8 mb-8">
