--- a/src/components/License.astro
+++ b/src/components/License.astro
@@ -3,7 +3,7 @@ const { title, url } = Astro.props;
 ---
 
 <br />
-<div role="alert" class="alert">
+<div role="alert" class="alert transition-colors">
   <svg
     viewBox="0 0 24 24"
     fill="none"
