--- a/src/components/ProfileCardMenu.astro
+++ b/src/components/ProfileCardMenu.astro
@@ -4,7 +4,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <ul
-  class="menu bg-base-100 w-full m-0 flex flex-col items-center lg:items-start"
+  class="menu bg-base-100 w-full m-0 flex flex-col items-center lg:items-start transition-colors"
 >
   {
     menuItems.map((item) => (
