--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -4,10 +4,10 @@ const { title, image, desc, url, badge, target = "_blank" } = Astro.props;
 ---
 
 <div
-  class="mt-8 relative w-full overflow-hidden card bg-base-100 shadow-xl flex flex-col lg:flex-row"
+  class="relative w-full overflow-hidden card bg-base-100 shadow-xl flex flex-col lg:flex-row fade-in-up"
 >
   <div
-    class="relative w-full h-auto rounded-3xl overflow-hidden card bg-base-100 flex-1 lg:order-1 order-2 flex card bg-base-100"
+    class="relative w-full h-auto rounded-3xl overflow-hidden card bg-base-100 flex-1 lg:order-1 order-2 flex fade-in-up"
   >
     <div
       class="envelope-back relative w-full h-full p-6 flex flex-col justify-between"
