--- a/src/components/EnvelopeCard.astro
+++ b/src/components/EnvelopeCard.astro
@@ -21,10 +21,10 @@ const target = "_self";
 ---
 
 <div
-  class="mt-8 relative w-full overflow-hidden card bg-base-100 shadow-xl flex flex-col lg:flex-row"
+  class="relative w-full overflow-hidden card bg-base-100 shadow-xl flex flex-col lg:flex-row fade-in-up transition-colors"
 >
   <div
-    class="relative w-full h-auto rounded-3xl overflow-hidden card bg-base-100 flex-1 lg:order-1 order-2 flex"
+    class="relative w-full h-auto rounded-0 overflow-hidden card bg-base-100 flex-1 lg:order-1 order-2 flex fade-in-up transition-colors"
   >
     <div class="relative w-full h-full p-6 flex flex-col justify-between">
       <a href={url} target={target}>
@@ -88,11 +88,7 @@ const target = "_self";
               )
             }
           </div>
-          {
-            word && (
-              <div class="badge whitespace-nowrap">{`${word} words`}</div>
-            )
-          }
+          {word && <div class="badge whitespace-nowrap">{`${word} words`}</div>}
         </div>
       </div>
     </div>
