--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -61,6 +61,15 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
               <span>Twitter</span>
             </a>
             <a
+              href="/Muhammad_Bassiouni_Resume.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="btn btn-sm btn-outline gap-2"
+            >
+              <Icon name="lucide:newspaper" class="w-4 h-4" />
+              <span>Resume</span>
+            </a>
+            <a
               href="mailto:evesunmaple@outlook.com"
               class="btn btn-sm btn-outline gap-2"
             >
@@ -72,10 +81,8 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
           <p class="text-base-content/80">
             Hello! I'm Muhammad Bassiouni, a passionate software engineer with 2
             years of experience in backend development, compiler and toolchain
-            technologies. Worked at Menoufia University (enabling digital
-            transformation). Contributed to LLVM. I love contributing to
-            open-source projects and building tools that help others create
-            beautiful digital experiences. Interested in working on
+            technologies. I love contributing to open-source projects and
+            building tools for developers. Interested in working on
             cutting-edge, scalable services technology with global impact.
           </p>
         </div>
@@ -85,18 +92,13 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
       <section
         class="prose prose-lg prose-gray dark:prose-invert space-y-12 px-6 py-8 max-w-full"
       >
-        <h2 class="text-3xl font-bold text-left mb-6">Experience</h2>
-
+        <h2 class="text-3xl md:text-4xl font-bold mb-2">Experience</h2>
         <!-- Backend Software Engineer -->
         <article class="space-y-4">
-          <header class="grid grid-cols-2 gap-4">
-            <div class="text-left font-semibold text-lg">
-              Backend Software Engineer
+            <div class="font-semibold">
+              Backend Software Engineer @ Menoufia University
             </div>
-            <div class="text-right text-lg">Sep 2023 – Sep 2024</div>
-            <div class="text-left text-lg">Menoufia University</div>
-            <div class="text-right italic text-lg">Menoufia, Egypt</div>
-          </header>
+            Sep 2023 – Sep 2024
           <ul class="list-disc space-y-2 text-left">
             <li>
               Reduced subscription costs of outsourcing portal system by
@@ -119,12 +121,8 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
 
         <!-- Site Supervisor -->
         <article class="space-y-4">
-          <header class="grid grid-cols-2 gap-4">
-            <div class="text-left font-semibold text-lg">Site Supervisor</div>
-            <div class="text-right text-lg">Oct 2022 – Dec 2023</div>
-            <div class="text-left text-lg">Udacity</div>
-            <div class="text-right italic text-lg">Menoufia, Egypt</div>
-          </header>
+            <div class="font-semibold text-lg">Site Supervisor @ Udacity</div>
+            <div class=" text-lg">Oct 2022 – Dec 2023</div>
           <ul class="list-disc space-y-2 text-left">
             <li>
               Led & coordinated efforts of DECI sessions, ensuring smooth
@@ -147,14 +145,10 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
 
         <!-- Backend Intern -->
         <article class="space-y-4">
-          <header class="grid grid-cols-2 gap-4">
-            <div class="text-left font-semibold text-lg">
-              Backend Software Engineer Intern
+            <div class="font-semibold text-lg">
+              Backend Software Engineer Intern @ Banque Misr
             </div>
-            <div class="text-right text-lg">Jul 2023 – Sep 2023</div>
-            <div class="text-left text-lg">Banque Misr</div>
-            <div class="text-right italic text-lg">New Cairo, Egypt</div>
-          </header>
+            <div class="text-lg">Jul 2023 – Sep 2023</div>
           <ul class="list-disc space-y-2 text-left">
             <li>
               Developed real-time exchange rate system using Spring Boot,
@@ -176,13 +170,12 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
       <section
         class="prose prose-lg prose-gray dark:prose-invert space-y-12 px-6 py-8 max-w-full"
       >
-        <h2 class="text-3xl font-bold text-left mb-6">Open Source Projects</h2>
+        <h2 class="text-3xl md:text-4xl font-bold mb-2">Open Source Projects</h2>
 
         <article class="space-y-4">
+          <div class="text-left font-semibold text-lg">Committer @ LLVM</div>
           <header class="grid grid-cols-2 gap-4">
-            <div class="text-left font-semibold text-lg">Committer</div>
-            <div class="text-right text-lg">Jan 2025 – Present</div>
-            <div class="text-left text-lg">LLVM</div>
+            <div class="text-left text-lg">Jan 2025 – Present</div>
             <div class="text-right italic text-lg">
               <a
                 href="https://github.com/llvm/llvm-project/pulls?q=author:bassiounix"
