--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -70,7 +70,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
               <span>Resume</span>
             </a>
             <a
-              href="mailto:evesunmaple@outlook.com"
+              href="mailto:muhammad.m.bassiouni@gmail.com"
               class="btn btn-sm btn-outline gap-2"
             >
               <Icon name="lucide:mail" class="w-4 h-4" />
